--- a/src/main/resources/templates/employeeLogin.html
+++ b/src/main/resources/templates/employeeLogin.html
@@ -5,6 +5,11 @@
     <title>Employee login</title>
 </head>
 <body>
-
+<form action="" method="get">
+    <label>Username: <input type="text"></label> <br/>
+    <label>Password: <input type="password"></label> <br/>
+    <a onclick="alert('Contact admin')" style="cursor: pointer; color: blue">Forgot password?</a>
+    <input type="submit">
+</form>
 </body>
 </html>
