Added mappings instead file

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <title>
     The order project
 </title>
-<a href="adminLogin.html">Admin</a>
-<a href="employeeLogin.html">Employee</a>
+<a href="admin-login">Admin</a>
+<a href="employee-login">Employee</a>
 </body>
 </html>
