--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,6 @@
 <title>
     The order project
 </title>
-<a href="admin-login">Admin</a>
-<a href="employee-login">Employee</a>
+<a href="/employees">Employees</a>
 </body>
 </html>
