--- a/src/main/resources/templates/admin-add-employee.html
+++ b/src/main/resources/templates/admin-add-employee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Add employee</title>
@@ -8,7 +8,11 @@
 <form action="/add-emp" method="post">
   <label>Firstname: <input type="text" name="firstname"></label> <br>
   <label>Lastname: <input type="text" name="lastname"></label> <br>
-  <label>Role: <input type="text" name="role"></label> <br>
+  <label>Role:
+    <select>
+      <option th:each="role : ${roles}" th:value="${role.name}" th:text="${role.name}" name="role"></option>
+    </select>
+  </label> <br>
   <label>PhoneNo: <input type="number" name="phoneNo"></label> <br>
   <label>Email address: <input type="text" name="emailAddress"></label> <br>
   <label>Gender:
