--- a/src/main/resources/templates/employee/admin-add-employee.html
+++ b/src/main/resources/templates/employee/admin-add-employee.html
@@ -5,7 +5,7 @@
     <title>Add employee</title>
 </head>
 <body>
-<form action="#" th:action="@{/add-emp}" th:object="${employee}" method="post">
+<form action="#" th:action="@{/save-employee}" th:object="${employee}" method="post">
   <label>Firstname: <input type="text" th:field="*{firstname}"></label> <br>
   <label>Lastname: <input type="text" th:field="*{lastname}"></label> <br>
   <label>Role:
