--- a/src/main/resources/templates/employee/admin-employee.html
+++ b/src/main/resources/templates/employee/admin-employee.html
@@ -30,7 +30,7 @@
             <td th:text="${emp.gender}"></td>
             <td>
                 <a th:href="@{/edit-employee?id={id}(id=${emp.employeeId})}">Update</a>
-                <a th:href="@{/delete-emp?id={id}(id=${emp.employeeId})}">Delete</a>
+                <a th:href="@{/delete-employee?id={id}(id=${emp.employeeId})}">Delete</a>
             </td>
         </tr>
     </tbody>
