Refactored and changed few things in form

--- a/src/main/resources/templates/employee/admin-add-role.html
+++ b/src/main/resources/templates/employee/admin-add-role.html
@@ -5,9 +5,9 @@
     <title>Add role</title>
 </head>
 <body>
-<form action="/add-role" method="post">
-  <input type="text" name="name">
-  <input type="submit">
+<form action="/save-role" method="post">
+  New role: <input type="text" name="name"> <br>
+  <input type="submit" value="save">
 </form>
 </body>
 </html>
