--- a/src/main/resources/templates/employee/role/add-role.html
+++ b/src/main/resources/templates/employee/role/add-role.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form action="/save-role" method="post">
-  New role: <input type="text" name="name"> <br>
+    <label>Name: <input type="text" name="name"></label> <br>
   <input type="submit" value="save">
 </form>
 </body>
