Changed title update* -> edit*

--- a/src/main/resources/templates/employee/update-employee.html
+++ b/src/main/resources/templates/employee/update-employee.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Update employee</title>
+    <title>Edit employee</title>
 </head>
 <body>
 <form action="#" th:action="@{/update-employee}" th:object="${employee}" method="post">
