--- a/src/main/resources/templates/order/add-order.html
+++ b/src/main/resources/templates/order/add-order.html
@@ -5,17 +5,40 @@
     <title>Add order</title>
 </head>
 <body>
-<form action="#" th:action="@{/add-order}" th:object="${order}" method="post">
-  <label>
-    Customer name: <input type="text" th:field="*{customer.name}">
-  </label>
-  <label>
-    Customer phoneNo: <input type="number" th:field="*{customer.phoneNo}">
-  </label>
-  <label>
-    Customer email address: <input type="email" th:field="*{customer.emailAddress}">
-  </label>
-  <input type="submit">
+<form action="#" th:action="@{/save-order}" th:object="${order}" method="post">
+  <label>Customer name: <input type="text" th:field="*{customer.name}"></label> <br>
+  <label>Customer phoneNo: <input type="number" th:field="*{customer.phoneNo}"></label> <br>
+  <label>Customer email address: <input type="email" th:field="*{customer.emailAddress}"></label> <br>
+  <label>Handle by:
+  <select th:field="*{handleBy}">
+    <option th:each="employee : ${employees}"
+            th:value="${employee.employeeId}"
+            th:text="${employee.firstname} + ${employee.lastname}"
+    ></option>
+  </select>
+  </label> <br>
+  <label>Service type:
+    <select th:field="*{service.serviceType}">
+      <option th:each="serviceType : ${serviceTypes}"
+              th:value="${serviceType.serviceTypeId}"
+              th:text="${serviceType.name}"
+      ></option>
+    </select>
+  </label> <br>
+  <label>Booking date: <input type="text" th:field="*{service.bookingDate}"></label> <br>
+  <label>Dimensions:
+    <select th:field="*{service.dimensions}">
+      <option th:each="dimension : ${dimensions}"
+              th:value="${dimension.dimensionId}"
+              th:text="${dimension.name}"
+      ></option>
+    </select>
+  </label> <br>
+  <label>Quantity: <input type="number" th:field="*{service.quantity}"></label> <br>
+  <label>Printing charges: <input type="number" th:field="*{service.printingCharges}"></label> <br>
+  <label>Total amount: <input type="number" th:field="*{totalAmount}"></label> <br>
+  <label>Amount paid: <input type="number" th:field="*{amountPaid}"></label> <br>
+  <input type="submit" value="save">
   <a href="/employees">Back</a>
 </form>
 </body>
