--- a/src/main/resources/templates/order/add-order.html
+++ b/src/main/resources/templates/order/add-order.html
@@ -39,7 +39,7 @@
   <label>Total amount: <input type="number" th:field="*{totalAmount}"></label> <br>
   <label>Amount paid: <input type="number" th:field="*{amountPaid}"></label> <br>
   <input type="submit" value="save">
-  <a href="/employees">Back</a>
+  <a href="/orders">Back</a>
 </form>
 </body>
 </html>
