Added id input field in form

--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <form action="#" th:action="@{/save-order}" th:object="${order}" method="post">
+  <input type="hidden" th:field="*{orderId}">
   <label>Customer name: <input type="text" th:field="*{customer.name}"></label> <br>
   <label>Customer phoneNo: <input type="number" th:field="*{customer.phoneNo}"></label> <br>
   <label>Customer email address: <input type="email" th:field="*{customer.emailAddress}"></label> <br>
@@ -39,7 +40,7 @@
   <label>Total amount: <input type="number" th:field="*{totalAmount}"></label> <br>
   <label>Amount paid: <input type="number" th:field="*{amountPaid}"></label> <br>
   <input type="submit" value="save">
+  <a href="/orders">Back</a>
 </form>
-<a href="/orders">Back</a>
 </body>
 </html>
