--- a/src/main/resources/templates/employee/role/save-role.html
+++ b/src/main/resources/templates/employee/role/save-role.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add role</title>
+    <title>Save role</title>
 </head>
 <body>
 <form action="#" th:action="@{/save-role}" th:object="${role}" method="post">
