--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add employee</title>
+    <title>Save employee</title>
 </head>
 <body>
 <form action="#" th:action="@{/save-employee}" th:object="${employee}" method="post">
