--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add order</title>
+    <title>Save order</title>
 </head>
 <body>
 <form action="#" th:action="@{/save-order}" th:object="${order}" method="post">
