--- a/src/main/resources/templates/order/dimensions/save-dimensions.html
+++ b/src/main/resources/templates/order/dimensions/save-dimensions.html
@@ -9,6 +9,7 @@
     <input type="hidden" th:field="*{dimensionsId}">
     <label>Dimensions: <input type="text" th:field="*{name}"></label> <br>
     <input type="submit" value="save">
+    <a href="/dimensions">Back</a>
 </form>
 </body>
 </html>
