--- a/src/main/resources/templates/order/service-type/save-service-type.html
+++ b/src/main/resources/templates/order/service-type/save-service-type.html
@@ -7,8 +7,9 @@
 <body>
 <form action="#" th:action="@{/save-service-type}" th:object="${serviceType}" method="post">
   <input type="hidden" th:field="*{serviceTypeId}">
-  <label>Name: <input type="text" th:field="*{name}"></label> <br>
+  <label>Service type: <input type="text" th:field="*{name}"></label> <br>
   <input type="submit" value="save">
+    <a href="/service-types">Back</a>
 </form>
 </body>
 </html>
