--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -5,7 +5,7 @@
     <title>Employees</title>
 </head>
 <body>
-<div th:insert="~{fragments.html :: navbar}"></div>
+<div th:insert="~{general.html :: navbar}"></div>
 <a href="/add-employee">Add employee</a>
 <a href="/roles">Roles</a>
 <table>
