--- a/src/main/resources/templates/employee/role/role.html
+++ b/src/main/resources/templates/employee/role/role.html
@@ -5,6 +5,7 @@
     <title>Roles</title>
 </head>
 <body>
+<div th:insert="~{general.html :: navbar}"></div>
 <a href="/add-role">Add role</a>
 <table>
   <thead>
