--- a/src/main/resources/templates/employee/role/save-role.html
+++ b/src/main/resources/templates/employee/role/save-role.html
@@ -5,6 +5,7 @@
     <title>Save role</title>
 </head>
 <body>
+<div th:insert="~{general.html :: navbar}"></div>
 <form action="#" th:action="@{/save-role}" th:object="${role}" method="post">
     <input type="hidden" th:field="*{roleId}">
     <label>Role: <input type="text" th:field="*{name}"></label> <br>
