--- a/src/main/resources/templates/order/dimensions/dimensions.html
+++ b/src/main/resources/templates/order/dimensions/dimensions.html
@@ -5,6 +5,7 @@
     <title>Dimensions</title>
 </head>
 <body>
+<div th:insert="~{general.html :: navbar}"></div>
 <a href="/add-dimensions">Add dimensions</a>
 <table>
     <thead>
