--- a/src/main/resources/templates/order/dimensions/save-dimensions.html
+++ b/src/main/resources/templates/order/dimensions/save-dimensions.html
@@ -5,6 +5,7 @@
     <title>Save dimensions</title>
 </head>
 <body>
+<div th:insert="~{general.html :: navbar}"></div>
 <form action="#" th:action="@{/save-dimensions}" th:object="${dimensions}" method="post">
     <input type="hidden" th:field="*{dimensionsId}">
     <label>Dimensions: <input type="text" th:field="*{name}"></label> <br>
