--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -5,6 +5,7 @@
     <title>Orders</title>
 </head>
 <body>
+<div th:insert="~{general.html :: navbar}"></div>
 <a href="/add-order">Add order</a>
 <table>
     <thead>
