--- a/src/main/resources/templates/order/service-type/save-service-type.html
+++ b/src/main/resources/templates/order/service-type/save-service-type.html
@@ -5,6 +5,7 @@
     <title>Save service type</title>
 </head>
 <body>
+<div th:insert="~{general.html :: navbar}"></div>
 <form action="#" th:action="@{/save-service-type}" th:object="${serviceType}" method="post">
   <input type="hidden" th:field="*{serviceTypeId}">
   <label>Service type: <input type="text" th:field="*{name}"></label> <br>
