--- a/src/main/resources/templates/order/service-type/service-type.html
+++ b/src/main/resources/templates/order/service-type/service-type.html
@@ -5,6 +5,7 @@
     <title>Service types</title>
 </head>
 <body>
+<div th:insert="~{general.html :: navbar}"></div>
 <a href="/add-service-type">Add service type</a>
 <table>
   <thead>
