Added service type and dimensions links

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -7,6 +7,8 @@
 <body>
 <div th:insert="~{general.html :: navbar}"></div>
 <a href="/add-order">Add order</a>
+<a href="/service-types">Service types</a>
+<a href="/dimensions">Dimensions</a>
 <table>
     <thead>
     <tr>
