Add back link fragment

--- a/src/main/resources/templates/general.html
+++ b/src/main/resources/templates/general.html
@@ -9,5 +9,6 @@
     <a href="/employees">Employee</a>
     <a href="/orders">Orders</a>
 </nav>
+<a th:fragment="back" onclick="history.back()" style="cursor: pointer; color: blue">Back</a>
 </body>
 </html>
