Added back link fragment

--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -43,7 +43,7 @@
   <label>Total amount: <input type="number" th:field="*{totalAmount}"></label> <br>
   <label>Amount paid: <input type="number" th:field="*{amountPaid}"></label> <br>
   <input type="submit" value="save">
-  <a href="/orders">Back</a>
 </form>
+<div th:replace="~{general.html :: back}"></div>
 </body>
 </html>
