--- a/src/main/resources/templates/employee/role/save-role.html
+++ b/src/main/resources/templates/employee/role/save-role.html
@@ -10,7 +10,7 @@
     <input type="hidden" th:field="*{roleId}">
     <label>Role: <input type="text" th:field="*{name}"></label> <br>
   <input type="submit" value="save">
-    <a href="/roles">Back</a>
 </form>
+<div th:replace="~{general.html :: back}"></div>
 </body>
 </html>
