--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -26,7 +26,7 @@
     <input type="radio" th:field="*{gender}" th:value="Female"> Female
   </label> <br>
   <input type="submit" value="save">
-  <a href="/employees">Back</a>
 </form>
+<div th:replace="~{general.html :: back}"></div>
 </body>
 </html>
