--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -15,6 +15,7 @@
 <table>
     <thead>
     <tr>
+        <th>Id</th>
         <th>Customer</th>
         <th>Handle by</th>
         <th>Service</th>
@@ -25,6 +26,7 @@
     </thead>
     <tbody>
     <tr th:each="order : ${orders}">
+        <td th:text="${order.orderId}"></td>
         <td>
             <p th:text="${order.customer.name}"></p>
             <div class="toggle">
