--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -24,6 +24,12 @@
         <th>Action</th>
     </tr>
     </thead>
+    <div>
+        <form action="/orders" method="get">
+            <input type="text" name="search">
+            <input type="submit" value="search">
+        </form>
+    </div>
     <tbody>
     <tr th:each="order : ${orders}">
         <td th:text="${order.orderId}"></td>
