Changed service status to order status in search form

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -15,9 +15,9 @@
 <form action="/orders">
     <input type="text" name="search">
     <input type="submit" value="search"> <br>
-    <input type="submit" name="serviceStatus" value="Pending">
-    <input type="submit" name="serviceStatus" value="Completed">
-    <input type="submit" name="serviceStatus" value="Cancelled">
+    <input type="submit" name="orderStatus" value="Pending">
+    <input type="submit" name="orderStatus" value="Completed">
+    <input type="submit" name="orderStatus" value="Cancelled">
 </form>
 <table>
     <thead>
