Added auto complete on in search input form

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -13,7 +13,7 @@
 <a href="/service-types">Service types</a>
 <a href="/dimensions">Dimensions</a>
 <form action="/orders">
-    <input type="text" name="search">
+    <input type="text"  name="search" autocomplete="on">
     <input type="submit" value="search"> <br>
     <input type="submit" name="orderStatus" value="Pending">
     <input type="submit" name="orderStatus" value="Completed">
