Added firstname thymeleaf error handling tag

--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -9,6 +9,7 @@
 <form action="#" th:action="@{/save-employee}" th:object="${employee}" method="post">
   <input type="hidden" th:field="*{employeeId}">
   <label>Firstname: <input type="text" th:field="*{firstname}"></label> <br>
+  <p th:if="${#fields.hasErrors('firstname')}">Invalid firstname</p>
   <label>Lastname: <input type="text" th:field="*{lastname}"></label> <br>
   <label>Role:
     <select th:field="*{role}">
