Added style to hide column hidden data

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Orders</title>
+    <style>
+        .toggle {display: none;}
+    </style>
 </head>
 <body>
 <div th:insert="~{general.html :: navbar}"></div>
